[update] - added download feature for reports, written tests for inventory and orders

--- a/src/main/webapp/html/brand-report.html
+++ b/src/main/webapp/html/brand-report.html
@@ -12,6 +12,9 @@
 
     <h3 class="brand-header mt-2">
         Brands Details
+        <button  type="button" class="btn btn-info" id="download-report">	Download report    <span class="material-symbols-outlined">
+download
+</span>
     </h3>
 
 
@@ -76,7 +79,7 @@ tune
 
 <footer th:replace="snippets.html :: name_footer"></footer>
 
-<script th:src="@{/static/brand.js}"/></script>
+<script th:src="@{/static/brand-report.js}"/></script>
 
 
 </body>
