--- a/src/main/webapp/html/snippets.html
+++ b/src/main/webapp/html/snippets.html
@@ -130,7 +130,7 @@
 <header th:fragment="site_nav_bar_imp" class="header-navbar">
   <!--NavBar-->
   <div class="logo">
-    <a class="navbar-logo-name" th:href="@{/}">
+    <a class="navbar-logo-name" th:href="@{/ui/home}">
       <img th:src="@{/static/img_2.png}" class="logo-increff-home"> <span >SMART-POS</span>
     </a>
   </div>
@@ -182,23 +182,6 @@
         </a>
 
       </ul>
-
-<!--      <ul class="navbar-nav ml-auto">-->
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link" th:href="@{/session/logout}">Logout</a>-->
-<!--        </li>-->
-<!--      </ul>-->
-
-
-<!--    </div>-->
-<!--    <ul class="icons">-->
-<!--      <a href="">-->
-<!--        <li><i class="ri-account-circle-line icon" title="Account"></i></li>-->
-<!--      </a>-->
-<!--      <a href="">-->
-<!--        <li><i class="ri-shopping-basket-line icon" title="Shopping"></i></li>-->
-<!--      </a>-->
-<!--    </ul>-->
   </nav>
 </header>
 
