--- a/src/main/webapp/html/inventory-report.html
+++ b/src/main/webapp/html/inventory-report.html
@@ -11,12 +11,47 @@
 <div class="container">
 
     <h3 class="inventory-header mt-2">Inventory Report
+        <button  type="button" class="btn btn-info" id="download-report">	Download report    <span class="material-symbols-outlined">
+download
+</span>
+        </button>
     </h3>
 
     <!-- Blank Row -->
     <div class="row">
         &nbsp;
     </div>
+    <div class="row mb-4">
+        <div class="col-12">
+            <form class="form-inline" id="inventory-report-filter-form">
+                <div class="form-group">
+                    <label for="inputBrandSearch" class="col-sm-2 col-form-label">Brand</label>
+                    <div class="col-sm-10">
+
+                        <select id="inputBrandSearch" class="form-control" name="brand">
+                            <option value="">Select an option</option>
+                        </select>
+                        <!--						<input type="text" class="form-control" name="brand" id="inputBrandSearch" placeholder="enter brand">-->
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputCategorySearch" class="col-sm-2 col-form-label">Category</label>
+                    <div class="col-sm-10">
+                        <select id="inputCategorySearch" class="form-control"  name="category">
+                            <option value="">Select an option</option>
+                        </select>
+                        <!--						<input type="text" class="form-control" name="category" id="inputCategorySearch" placeholder="enter category">-->
+                    </div>
+
+                </div>
+                &nbsp;
+                <button type="button" class="btn btn-primary" id="filter-brand-category"><span class="material-symbols-outlined">
+tune
+</span> Filter </button>
+            </form>
+        </div>
+    </div>
+
     <div class="row">
 
         <!-- Table -->
@@ -24,8 +59,6 @@
             <table class="table table-striped" id="inventory-table">
                 <thead>
                 <tr>
-                    <th scope="col">Sl No.</th>
-                    <th scope="col">Barcode</th>
                     <th scope="col">Brand</th>
                     <th scope="col">Category</th>
                     <th scope="col">Quantity</th>
