--- a/src/main/webapp/html/sales-report.html
+++ b/src/main/webapp/html/sales-report.html
@@ -10,38 +10,40 @@
 
 <div class="container">
 
-    <h3 class="sales-report mt-2">Sales Report
+    <h3 class="sales-report mt-2 mb-4">Sales Report
+        <button  type="button" class="btn btn-info" id="download-report">	Download report    <span class="material-symbols-outlined">
+download
+</span>
+        </button>
     </h3>
-        <form class="row g-3" id="sales-filter-form">
-            <div class="form-group col-md-6">
-                <label for="inputStartDate" class="col-form-label">Start Date</label>
+        <form class="row justify-content-center" id="sales-filter-form">
+            <div class="form-group col-sm-3">
+                <label for="inputStartDate" class="col">Start Date</label>
                 <div class="col-sm-10">
                     <input type="date" class="form-control" name="startDate" id="inputStartDate" placeholder="enter start date">
                 </div>
             </div>
-            <div class="form-group col-md-6">
-                <label for="inputEndDate" class="col-form-label">End Date</label>
+            <div class="form-group col-sm-3">
+                <label for="inputEndDate" class="col">End Date</label>
                 <div class="col-sm-10">
                     <input type="date" class="form-control" name="endDate" id="inputEndDate" placeholder="enter end date">
                 </div>
             </div>
-            <div class="form-group col-md-6">
-                <label for="inputBrand" class="col-sm-2 col-form-label">Brand</label>
+            <div class="form-group col-sm-3">
+                <label for="inputBrand" class="col">Brand</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="brand" id="inputBrand" placeholder="enter brand">
                 </div>
             </div>
-            <div class="form-group col-md-6">
-                <label for="inputCategory" class="col-sm-2 col-form-label">category</label>
+            <div class="form-group col-sm-3">
+                <label for="inputCategory" class="col">category</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" name="category" id="inputCategory" placeholder="enter category">
                 </div>
             </div>
-            <div class=" col text-center">
-                <button type="button" class="btn btn-primary" id="filter-sales"><span class="material-symbols-outlined">
+            <button type="button" class="btn btn-primary" id="filter-sales"><span class="material-symbols-outlined">
 tune
 </span> Filter </button>
-            </div>
             &nbsp;
         </form>
 
